# thumbnailer

./: .bazelrc  CMakeLists.txt  README.md  WORKSPACE
.github/workflows/: main.yml
examples/: BUILD  example_util.c
imageio/: BUILD
src/: BUILD  class.cc  class.h  main.cc  slope_optim.cc  thumbnailer.cc  thumbnailer.h  thumbnailer.proto  thumbnailer_compare.cc  thumbnailer_near_lossless.cc  thumbnailer_slope_optim.cc  thumbnailer_util.cc  thumbnailer_util.h  thumbnailer_utils.cc  thumbnailer_utils.h
src/utils/: BUILD  thumbnailer_compare.cc  thumbnailer_utils.cc  thumbnailer_utils.h
test/: BUILD  CMakeLists.txt  main.cc  thumbnailer_test.cc
utils/: thumbnailer_utils.cc  thumbnailer_utils.h
